--- a/SerenApp.Web/Shared/NavMenu.razor
+++ b/SerenApp.Web/Shared/NavMenu.razor
@@ -10,9 +10,28 @@
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <nav class="flex-column">
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
+            <AuthorizeView>
+                <Authorized>
+                    <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+                        <span class="oi oi-home" aria-hidden="true"></span> Home
+                    </NavLink>
+                    <NavLink class="nav-link" href="logout" Match="NavLinkMatch.All">
+                        <span class="oi oi-home" aria-hidden="true"></span> Logout
+                    </NavLink>
+                </Authorized>
+                <NotAuthorized>
+                    <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+                        <span class="oi oi-home" aria-hidden="true"></span> Home
+                    </NavLink>
+                    <NavLink class="nav-link" href="login" Match="NavLinkMatch.All">
+                        <span class="oi oi-home" aria-hidden="true"></span> Login
+                    </NavLink>
+                    <NavLink class="nav-link" href="register" Match="NavLinkMatch.All">
+                        <span class="oi oi-home" aria-hidden="true"></span> Register
+                    </NavLink>
+                </NotAuthorized>
+            </AuthorizeView>
+            
         </div>
     </nav>
 </div>
