--- a/SerenApp.Web/App.razor
+++ b/SerenApp.Web/App.razor
@@ -1,8 +1,11 @@
+@using SerenApp.Web.Logic
+@inject TokenProvider TokenProvider
+
 <CascadingAuthenticationState>
     <Router AppAssembly="@typeof(App).Assembly">
         <Found Context="routeData">
             <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
-            @*<FocusOnNavigate RouteData="@routeData" Selector="h1" />*@
+            <FocusOnNavigate RouteData="@routeData" Selector="h1" />
         </Found>
         <NotFound>
             <PageTitle>Not found</PageTitle>
@@ -12,3 +15,13 @@
         </NotFound>
     </Router>
 </CascadingAuthenticationState>
+
+@code {
+    [Parameter]
+    public InitialState InitialState { get; set; }
+
+    protected override async Task OnInitializedAsync()
+    {
+        TokenProvider.AntiForgeryToken = InitialState.AntiForgeryToken;
+    }
+}
