Added admin Logic Updated index page Updated Logic

--- a/SerenApp.Web/Areas/Identity/Pages/Account/Logout.cshtml
+++ b/SerenApp.Web/Areas/Identity/Pages/Account/Logout.cshtml
@@ -1,13 +1,13 @@
 @page "/identiy/account/logout"
 @using Microsoft.AspNetCore.Authentication
 @using Microsoft.AspNetCore.Authentication.Cookies
-@inject IHttpContextAccessor _accessor
+@inject IHttpContextAccessor accessor
 
 @functions {
 
     public async Task<IActionResult> OnPostAsync()
     {
-        await _accessor.HttpContext
+        await accessor.HttpContext
         .SignOutAsync(CookieAuthenticationDefaults.AuthenticationScheme);
         return Redirect("~/");
     }
