--- a/SerenApp.Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/SerenApp.Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -9,6 +9,9 @@
     <label for="password">Password</label>
     <input asp-for="Model.Password" type="password" id="password" />
 
+    <label for="confirm-password">Password</label>
+    <input asp-for="Model.ConfirmPassword" type="password" id="confirm-password" />
+
     <button type="submit">Submit</button>
 </form>
 
