--- a/SerenApp.Web/Pages/_Layout.cshtml
+++ b/SerenApp.Web/Pages/_Layout.cshtml
@@ -8,7 +8,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="~/" />
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css" />
+    <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="/lib/open-iconic/font/css/open-iconic-bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="SerenApp.Web.styles.css" rel="stylesheet" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
