--- a/SerenApp.Web/Areas/Identity/Pages/Shared/_Layout.cshtml
+++ b/SerenApp.Web/Areas/Identity/Pages/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
     <link href="css/site.css" rel="stylesheet" />
 </head>
 <body>
-    <nav class="position-fixed top-0 left-0 w-100 navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="sticky-top navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container-fluid">
             <span class="navbar-brand mb-0 h1">SerenApp</span>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-menu" aria-controls="navbar-menu" aria-expanded="false" aria-label="Toggle navigation">
