--- a/SerenApp.Web/Areas/Identity/Pages/Shared/_Layout.cshtml
+++ b/SerenApp.Web/Areas/Identity/Pages/Shared/_Layout.cshtml
@@ -19,13 +19,19 @@
             <div class="collapse navbar-collapse" id="navbar-menu">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="/">Home</a>
+                        <a class="nav-link" href="/">
+                            <span class="oi oi-home" aria-hidden="true"></span> Home
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/identity/account/login">Login</a>
+                        <a class="nav-link" href="/identity/account/login">
+                            <span class="oi oi-account-login" aria-hidden="true"></span> Login
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/identity/account/register">Register</a>
+                        <a class="nav-link" href="/identity/account/register">
+                            <span class="oi oi-pencil" aria-hidden="true"></span> Register
+                        </a>
                     </li>
                 </ul>
             </div>
