--- a/SerenApp.Web/Pages/DeviceManagement.razor
+++ b/SerenApp.Web/Pages/DeviceManagement.razor
@@ -3,40 +3,79 @@
 
 @using SerenApp.Core.Interfaces
 @using SerenApp.Core.Model
+@using System.Linq;
 
 @inject IDeviceRepository Devices
 @inject AuthenticationStateProvider AuthenticationStateProvider
 
-<h3>Device Management</h3>
+<section class="mt-3">
+    <h3>Device Management</h3>
+</section>
 
-<h4>Add new Device</h4>
-<p>Device Id</p>
-<input type="text" placeholder="Device Id" @bind="newDeviceId"/>
-<button @onclick="AddDevice" disabled=@string.IsNullOrWhiteSpace(newDeviceId)>Add</button>
-<p>@status</p>
+@if (!string.IsNullOrEmpty(status))
+{
+    <section class="mt-3">
+        <Error>@status</Error>
+    </section>
+}
 
-<h4>Device List</h4>
-<ul>
-    @foreach(var device in devices)
+<section class="mt-3">
+    <div class="row">
+        <div class="col">
+            <label class="form-label">Add new Device</label>
+        </div>
+        <div class="col">
+            <input class="form-control" type="text" placeholder="Device Id" @bind="newDeviceId"/>
+        </div>
+        <div class="col">
+            <button class="btn btn-primary" @onclick="AddDevice" disabled=@(loading || string.IsNullOrWhiteSpace(newDeviceId))>
+                Add
+            </button>
+        </div>
+    </div>
+</section>
+
+<section class="mt-3">
+    <h4>Device List</h4>
+    @if (loading)
     {
-        <li>
-            <p>Id: @device.ID</p>
-            <p>Name: @device.Name</p>
-            <button @onclick="() => RemoveDevice(device)">Remove</button>
-        </li>
+        <Spinner/>
     }
-</ul>
+    else
+    {
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>Name</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach(var device in devices)
+                {
+                    <tr>
+                        <td>@device.ID</td>
+                        <td>@device.Name</td>
+                        <td><button class="btn btn-outline-primary" @onclick="() => RemoveDevice(device)"><span class="oi oi-trash"></span></button></td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    }
+</section>
 
 @code {
 
-    private IEnumerable<Core.Model.Device> devices;
-    private string newDeviceId;
-    private string status;
+    private List<Core.Model.Device> devices = new List<Core.Model.Device>();
+    private string newDeviceId = "";
+    private string status = "";
+    private bool loading = true;
 
-    private async void AddDevice()
+    private async Task AddDevice()
     {
         status = "";
         Guid parsed;
+        loading = true;
 
         try
         {
@@ -45,43 +84,45 @@
         catch(Exception e)
         {
             status = e.Message;
+            loading = false;
             return;
         }
 
         try
         {
             var device = await Devices.Insert(new Core.Model.Device{ID = parsed, Name = "SerenBracelet", FirmwareVersion = "1.0"});
-            //devices.Add(device);
+            devices.Add(device);
         }
         catch(Exception e)
         {
             status = e.Message;
+            loading = false;
             return;
         }
 
-        status = "successfully added!";
+        loading = false;
     }
 
-    private async void RemoveDevice(Core.Model.Device device)
+    private async Task RemoveDevice(Core.Model.Device device)
     {
         status = "";
 
         try
         {
             await Devices.Delete(device);
-            //devices.Remove(device);
+            devices.Remove(device);
         }
         catch(Exception e)
         {
             status = e.Message;
             return;
         }
-
-        status = "successfully removed!";
     }
 
     protected override async Task OnInitializedAsync()
     {
-        this.devices = await Devices.GetAll();
+        loading = true;
+        this.devices = (await Devices.GetAll()).ToList();
+        loading = false;
     }
 }
