--- a/SerenApp.Web/Pages/Devices.razor
+++ b/SerenApp.Web/Pages/Devices.razor
@@ -8,35 +8,68 @@
 @inject IUserRepository Users
 @inject AuthenticationStateProvider AuthenticationStateProvider
 
-<h3>Devices</h3>
+<section class="mt-3">
+    <h3>Devices</h3>
+</section>
 
-@if(user.Devices is not null)
+@if (loading)
 {
-<ul>
-    @foreach(var device in user.Devices)
-    {
-    <li><NavLink href=@($"/devices/{device.ID}")>@device.Name</NavLink></li>
-    }
-</ul>    
+    <Spinner/>
+}
+else
+{
+    <section class="mt-3">
+        <h4>Your Devices</h4>
+        @if (user?.Devices is null)
+        {
+            <p>No devices</p>
+        }
+        else
+        {
+            <ul class="list-group">
+                @foreach(var device in user.Devices)
+                {
+                <NavLink class="list-group-item list-group-item-action" href=@($"/devices/{device.ID}")>@device.Name</NavLink>
+                }
+            </ul>
+        }
+    </section>
 }
 
-<h4>Add new Device</h4>
-<p>Device Id</p>
-<input type="text" placeholder="Device Id" @bind="newDeviceId"/>
-<button @onclick="AddDevice" disabled=@string.IsNullOrWhiteSpace(newDeviceId)>Add</button>
-<p>@status</p>
+<section class="mt-3">
+    <div class="row">
+        <div class="col">
+            <label class="form-label">Add new Device</label>
+        </div>
+        <div class="col">
+            <input class="form-control" type="text" placeholder="Device Id" @bind="newDeviceId"/>
+        </div>
+        <div class="col">
+            <button class="btn btn-primary" @onclick="AddDevice" disabled=@(loading || string.IsNullOrWhiteSpace(newDeviceId))>Add</button>
+        </div>
+    </div>
+</section>
+
+@if (!string.IsNullOrEmpty(status))
+{
+    <section class="mt-3">
+        <Error>@status</Error>
+    </section>
+}
 
 @code {
 
     private User user;
-    private string newDeviceId;
-    private string status;
+    private string newDeviceId = "";
+    private string status = "";
+    private bool loading = true;
 
-    private async void AddDevice()
+    private async Task AddDevice()
     {
         status = "";
         Guid parsed;
         Core.Model.Device device;
+        loading = true;
 
         try
         {
@@ -45,6 +78,7 @@
         catch(Exception e)
         {
             status = e.Message;
+            loading = false;
             return;
         }
 
@@ -55,6 +89,7 @@
         catch(Exception e)
         {
             status = e.Message;
+            loading = false;
             return;
         }
 
@@ -69,10 +104,11 @@
         catch(Exception e)
         {
             status = e.Message;
+            loading = false;
             return;
         }
 
-        status = "successfully added!";
+        loading = false;
     }
 
     protected override async Task OnInitializedAsync()
@@ -82,7 +118,9 @@
 
         if (user.Identity.IsAuthenticated)
         {
+            loading = true;
             this.user = await Users.GetByPhoneNumber(user.Identity.Name);
+            loading = false;
         }
     }
 }
