--- a/SerenApp.Web/Pages/_Layout.cshtml
+++ b/SerenApp.Web/Pages/_Layout.cshtml
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css" />
     <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="/lib/open-iconic/font/css/open-iconic-bootstrap.min.css" />
+    <script src="lib/chart.js/chart.min.js"></script>
+    <script src="lib/date-fns/date_fns.min.js"></script>
+    <script src="lib/chartjs-adapter-date-fns/chartjs-adapter-date-fns.bundle.min.js"></script>
     <link href="css/site.css" rel="stylesheet" />
     <link href="SerenApp.Web.styles.css" rel="stylesheet" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
