--- a/SerenApp.Web/Pages/Device.razor
+++ b/SerenApp.Web/Pages/Device.razor
@@ -6,8 +6,10 @@
 
 @inject IDeviceRepository Devices
 @inject IUserRepository Users
+@inject IDeviceDataRepository Data
 @inject AuthenticationStateProvider AuthenticationStateProvider
 @inject NavigationManager NavManager
+@inject IJSRuntime JSRuntime
 
 <section class="mt-3">
     <h3>Device</h3>
@@ -50,7 +52,9 @@ else
 
     <section class="mt-3">
         <h4>Device Data</h4>
-        <p>TODO</p>
+        <div>
+          <canvas @ref="Chart"></canvas>
+        </div>
     </section>
 }
 
@@ -65,6 +69,9 @@ else
 
     [Parameter]
     public string DeviceId { get; set; }
+
+    private IJSObjectReference module;
+    private ElementReference Chart;
 
     private async Task ChangeDeviceName()
     {
@@ -101,7 +108,54 @@ else
             finally
             {
                 loading = false;
-            }
+            }   
         }
+    }
+
+    private async Task RenderChart()
+    {
+        var data = await Data.GetManyByDevice(device);
+
+        var battery = new
+        {
+            label = "Battery Percentage",
+            data = data.Select(x => x.Battery),
+            yAxisID = "Battery"
+        };
+        var bloodOxygen = new
+        {
+            label = "Blood Oxygen Percentage",
+            data = data.Select(x => x.BloodOxygen),
+            yAxisID = "BloodOxygen"
+        };
+        var bloodPressure = new
+        {
+            label = "Blood Pressure",
+            data = data.Select(x => x.BloodPressure),
+            yAxisID = "BloodPressure"
+        };
+        var bodyTemperature = new
+        {
+            label = "Body Temperature",
+            data = data.Select(x => x.BodyTemperature),
+            yAxisID = "BodyTemperature"
+        };
+        var heartFrequency = new
+        {
+            label = "Heart Frequency",
+            data = data.Select(x => x.HeartFrequency),
+            yAxisID = "HeartFrequency"
+        };
+
+        await module.InvokeVoidAsync("RenderChart", Chart, new
+        {
+            datasets = new List<object>(){heartFrequency, bodyTemperature, bloodPressure, bloodOxygen, battery}
+        });
+    }
+
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        module = await JSRuntime.InvokeAsync<IJSObjectReference>("import","./Pages/Device.razor.js");
+        if (device is not null) await RenderChart();
     }
 }
