--- a/SerenApp.Web/Pages/Device.razor
+++ b/SerenApp.Web/Pages/Device.razor
@@ -52,8 +52,25 @@ else
 
     <section class="mt-3">
         <h4>Device Data</h4>
-        <div>
-          <canvas @ref="Chart"></canvas>
+        <div class="row">
+            <div class="col-md">
+                <h5>Heart</h5>
+                <div class="chart-container">
+                    <canvas @ref="HeartChart"></canvas>
+                </div>
+            </div>
+            <div class="col-md">
+                <h5>Body</h5>
+                <div class="chart-container">
+                    <canvas @ref="BodyChart"></canvas>
+                </div>
+            </div>
+            <div class="col-md">
+                <h5>Battery</h5>
+                <div class="chart-container">
+                    <canvas @ref="BatteryChart"></canvas>
+                </div>
+            </div>
         </div>
     </section>
 }
@@ -71,7 +88,9 @@ else
     public string DeviceId { get; set; }
 
     private IJSObjectReference module;
-    private ElementReference Chart;
+    private ElementReference HeartChart;
+    private ElementReference BodyChart;
+    private ElementReference BatteryChart;
 
     private async Task ChangeDeviceName()
     {
@@ -112,7 +131,7 @@ else
         }
     }
 
-    private async Task RenderChart()
+    private async Task RenderCharts()
     {
         var data = await Data.GetManyByDevice(device);
 
@@ -120,42 +139,68 @@ else
         {
             label = "Battery Percentage",
             data = data.Select(x => x.Battery),
-            yAxisID = "Battery"
+            borderColor = "limeGreen",
+            backgroundColor = "limeGreen",
+            yAxisID = "yBattery"
         };
         var bloodOxygen = new
         {
             label = "Blood Oxygen Percentage",
             data = data.Select(x => x.BloodOxygen),
-            yAxisID = "BloodOxygen"
+            borderColor = "dodgerBlue",
+            backgroundColor = "dodgerBlue",
+            yAxisID = "yBloodOxygen"
         };
         var bloodPressure = new
         {
             label = "Blood Pressure",
             data = data.Select(x => x.BloodPressure),
-            yAxisID = "BloodPressure"
+            borderColor = "steelBlue",
+            backgroundColor = "steelBlue",
+            yAxisID = "yBloodPressure"
         };
         var bodyTemperature = new
         {
             label = "Body Temperature",
             data = data.Select(x => x.BodyTemperature),
-            yAxisID = "BodyTemperature"
+            borderColor = "paleVioletRed",
+            backgroundColor = "paleVioletRed",
+            yAxisID = "yBodyTemperature"
         };
         var heartFrequency = new
         {
             label = "Heart Frequency",
             data = data.Select(x => x.HeartFrequency),
-            yAxisID = "HeartFrequency"
+            borderColor = "tomato",
+            backgroundColor = "tomato",
+            yAxisID = "yHeartFrequency"
         };
 
-        await module.InvokeVoidAsync("RenderChart", Chart, new
+        await module.InvokeVoidAsync("RenderHeartChart", HeartChart, new
         {
-            datasets = new List<object>(){heartFrequency, bodyTemperature, bloodPressure, bloodOxygen, battery}
+            labels = data.Select(x => x.ID.Timestamp),
+            datasets = new List<object>(){heartFrequency, bloodPressure}
+        });
+        await module.InvokeVoidAsync("RenderBodyChart", BodyChart, new
+        {
+            labels = data.Select(x => x.ID.Timestamp),
+            datasets = new[]{bloodOxygen, bodyTemperature}
+        });
+        await module.InvokeVoidAsync("RenderBatteryChart", BatteryChart, new
+        {
+            labels = data.Select(x => x.ID.Timestamp),
+            datasets = new[]{battery}
         });
     }
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
         module = await JSRuntime.InvokeAsync<IJSObjectReference>("import","./Pages/Device.razor.js");
-        if (device is not null) await RenderChart();
+        if (device is not null) {
+            try {
+                await RenderCharts();
+            }
+            catch { }
+        }
     }
 }
