--- a/SerenApp.Web/Shared/NavMenu.razor
+++ b/SerenApp.Web/Shared/NavMenu.razor
@@ -24,6 +24,9 @@
                     <NavLink class="nav-link" href="/device-management">
                         <span class="oi oi-cog" aria-hidden="true"></span> Devices
                     </NavLink>
+                    <NavLink class="nav-link" href="/device-reports">
+                        <span class="oi oi-graph" aria-hidden="true"></span> Reports
+                    </NavLink>
                 </AuthorizeView>
                 <AuthorizeView>
                     <Authorized>
