--- a/SerenApp.Web/Pages/Index.razor
+++ b/SerenApp.Web/Pages/Index.razor
@@ -3,16 +3,22 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
+<div class="d-flex flex-column align-items-center justify-content-center" style="height: 90vh">
 
-Welcome to your new app.
+        <img class="w-100" src="img/logo.png"/>
+        <h1>SerenApp</h1>
+        <h4>In randomness we trust!</h4>
+        <AuthorizeView Roles="@Logic.AccountLogic.UserRole">
+            You are logged in as User
+        </AuthorizeView>
+        <AuthorizeView Roles="@Logic.AccountLogic.AdminRole">
+            You are logged in as Admin
+        </AuthorizeView>
+        <AuthorizeView>
+            <NotAuthorized>You are not logged in</NotAuthorized>
+        </AuthorizeView>
 
-<AuthorizeView Roles="@Logic.AccountLogic.UserRole">
-    You are logged in as User
-</AuthorizeView>
-<AuthorizeView Roles="@Logic.AccountLogic.AdminRole">
-    You are logged in as Admin
-</AuthorizeView>
-<AuthorizeView>
-    <NotAuthorized>You are not logged in</NotAuthorized>
-</AuthorizeView>
+</div>
+
+
+
